2014-12-28  Matteo Corti  <matteo@corti.li>

	* check_updates: updated the check for the presence of the --secuity option

2014-12-19  Matteo Corti  <matteo@corti.li>

	* t/00_modules.t: removed dependency on Sort::Version 

2014-09-21  Matteo Corti  <matteo@corti.li>

	* Version 1.6.8
	* check_updates: removed dependency on Sort::Version 

2014-05-23  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.7
	* check_updates: support for Oracle UEK-kernels

2013-10-10  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.6
	* check_updates: support for openvz kernels

2013-07-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.5
	* check_updates: disabled ePN

2013-06-18  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.4
	* check_updates: handle yum output split on more lines

2013-05-11  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.3
	* check_updates: do not print the performance data of the security
	                 updates if the Yum security plugin is not installed

2013-03-29  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.2
	* check_updates: Applied a patch adding the possibility to pass
                         arguments to Yum

2012-11-18  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: Added Oracle to the systems list

2012-09-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.1
	* check_updates: recognized PUIAS Linux

2012-04-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.6.0
	* check_updates: added an option --security-only to ignore non-security
                         related updates

2011-12-04  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.5.2
	* check_updates: fixed a bug introduced in 1.5.1 which prevented system
                         detection on CentOS 5.X

2011-12-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.5.1
	* check_updates: support for Amazon Linux 

2011-10-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* Version 1.5.0