@@ -34,9 +34,9 @@ our $VERSION = '1.6.9';
 
 use Carp;
 use English qw(-no_match_vars);
-use Nagios::Plugin::Getopt;
-use Nagios::Plugin::Threshold;
-use Nagios::Plugin;
+use Monitoring::Plugin::Getopt;
+use Monitoring::Plugin::Threshold;
+use Monitoring::Plugin;
 use POSIX qw(uname);
 use Readonly;
 
@@ -838,12 +838,12 @@ sub run {
     $help         = q{};
     $bootcheck    = 1;
     $wrong_kernel = 0;
-    $plugin       = Nagios::Plugin->new( shortname => 'CHECK_UPDATES' );
+    $plugin       = Monitoring::Plugin->new( shortname => 'CHECK_UPDATES' );
 
     ########################
     # Command line arguments
 
-    $options = Nagios::Plugin::Getopt->new(
+    $options = Monitoring::Plugin::Getopt->new(
         usage   => 'Usage: %s [OPTIONS]',
         version => $VERSION,
         url     => 'https://trac.id.ethz.ch/projects/nagios_plugins',
@@ -900,7 +900,7 @@ sub run {
               . q{)} );
     }
 
-    $threshold = Nagios::Plugin::Threshold->set_thresholds(
+    $threshold = Monitoring::Plugin::Threshold->set_thresholds(
         warning  => $options->get('warning'),
         critical => $options->get('critical'),
     );
@@ -962,12 +962,12 @@ sub run {
             $status = CRITICAL;
         }
 
-        # Nagios::Plugin does not support the addition Nagios 3 status lines
+        # Monitoring::Plugin does not support the addition Nagios 3 status lines
         # -> we do it manually
 
         #<<<
         print 'CHECK_UPDATES '  ## no critic (RequireCheckedSyscalls)
-            . $Nagios::Plugin::STATUS_TEXT{$status}
+            . $Monitoring::Plugin::STATUS_TEXT{$status}
             . " - $exit_message |";
         #>>>
         for my $pdata ( @{ $plugin->perfdata } ) {
